--- a/DSA2.ipynb
+++ b/DSA2.ipynb
@@ -151,6 +151,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bubble Sort Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Bubble Sort is the simplest sorting algorithm that works by repeatedly swapping the adjacent elements if they are in the wrong order.\n",
+    "- This algorithm is not suitable for large data sets as its average and worst-case time complexity are quite high.\n",
+    "\n",
+    "- We sort the array using multiple passes.\n",
+    "- After the first pass, the maximum element goes to end (its correct position).\n",
+    "- Same way, after second pass, the second largest element goes to second last position and so on.\n",
+    "- In every pass, we process only those elements that have already not moved to correct position.\n",
+    "- After k passes, the largest k elements must have been moved to the last k positions.\n",
+    "- In a pass, we consider remaining elements and compare all adjacent and swap if larger element is before a smaller element.\n",
+    "- If we keep doing this, we get the largest (among the remaining elements) at its correct position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "## This is a simple code \n",
+    "def bubbleSort(arr):\n",
+    "    n = len(arr)\n",
+    "    \n",
+    "    # Traverse through all array elements\n",
+    "    for i in range(n):\n",
+    "        swapped = False\n",
+    "\n",
+    "        # Last i elements are already in place\n",
+    "        for j in range(0, n-i-1):\n",
+    "\n",
+    "            # Traverse the array from 0 to n-i-1\n",
+    "            # Swap if the element found is greater\n",
+    "            # than the next element\n",
+    "            if arr[j] > arr[j+1]:\n",
+    "                arr[j], arr[j+1] = arr[j+1], arr[j]\n",
+    "                swapped = True\n",
+    "        if (swapped == False):\n",
+    "            break\n",
+    "\n",
+    "arr = [5, 2, 3, 1, 9, 10, 7, 6]\n",
+    "\n",
+    "print(bubbleSort(arr))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
